force-app/main/default/objects/Bill__c/Bill__c.object-meta.xml
<CustomObject>
    <description>It contains the bills of the media.</description>
    <label>Bill</label>
    <nameField>
        <label>Bill Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>