force-app/main/default/objects/Bill__c/fields/Bill_Number__c.field-meta.xml
<CustomField>
    <fullName>Bill_Number__c</fullName>
    <displayFormat>Bill-{0000}</displayFormat>
    <inlineHelpText>unique ID for the bills</inlineHelpText>
    <label>Bill Number</label>
    <type>AutoNumber</type>
</CustomField>