force-app/main/default/objects/Bill__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>about the bills</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>